--- a/user-card/src/App.css
+++ b/user-card/src/App.css
@@ -36,3 +36,28 @@
     transform: rotate(360deg);
   }
 }
+
+
+.user-card{
+  width: 100%;
+  height: 100vh;
+  max-width: 400px;
+  padding: 10px;
+  margin: 0 auto;
+  box-shadow: 1px 1px 10px;
+
+}
+
+.user-card .img-wrapper img{
+  width: 150px;
+  border-radius: 150px;
+}
+
+.follow{
+  display: flex;
+  width: 300px;
+  background: #f1f1f1;
+  padding: 10px;
+  margin: 10px auto;
+  justify-content: space-evenly;;
+}
